--- a/client/src/index.css
+++ b/client/src/index.css
@@ -388,3 +388,24 @@ footer {
   background-color: var(--colorOne);
   border: 1px solid white;
 }
+
+@media screen and (max-width: 1100px) {
+  .log-flex {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .log-image::before {
+    display: none;
+  }
+
+  .log-image {
+    width: 100%;
+    height: 20%;
+  }
+
+  .log-form-cont {
+    width: 100%;
+    height: 80%;
+  }
+}
