--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,7 +44,8 @@ footer {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 200px;
+  gap: 2rem;
+  margin-right: 1.75rem;
 }
 
 .nav-links a {
@@ -147,11 +148,13 @@ footer {
   cursor: pointer;
 }
 
-/* Dashboard Styles */
+/* About Page Styles */
 
-.dash-cont {
+.about-cont {
+  padding: 3rem;
   height: calc(100vh - 92.5px);
-  background-color: var(--colorThree);
+  background-color: var(--colorOne);
+  color: var(--colorThree);
 }
 
 .est-cont {
